--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -41,4 +41,8 @@
     border-radius: 20px;
     font-size: 15px;
     font-weight: 500;
+    color: #393939;
+    background: white;
+    border: none;
+    cursor: pointer;
 }
