--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -2,3 +2,12 @@
     padding: 0px 10px;
     padding-bottom: 100px;
 }
+.hero{
+    max-width: 600px;
+    margin: 80px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 30px;
+}
