--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -19,3 +19,14 @@
     color: #e3e3e3;
     line-height: 1.5;
 }
+.hero form{
+    padding: 8px;
+    width: 80%;
+    background-color: white;
+    border-radius: 5px;
+    font-size: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+}
