--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -30,3 +30,10 @@
     align-items: center;
     gap: 10px;
 }
+.hero input{
+    flex: 1;
+    font-size: 16px;
+    outline: none;
+    border: none;
+    padding-left: 10px;
+}
