--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -46,3 +46,9 @@
     border-radius: 5px;
     cursor: pointer;
 }
+.crypto-table{
+    max-width: 800px;
+    margin: auto;
+    background: linear-gradient(rgba(84,3,255,0.15), rgba(105,2,153,0.15));
+    border-radius: 15px;
+}
